// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescriptionContainer Component ENZYME snapshot 1`] = `
<DescriptionContainer>
  <styled.div>
    <div
      className="sc-bdVaJa fdsMyH"
    >
      <price />
      <promotions />
      <quantity />
      <buy-button-container />
      <returns />
      <share-container />
      <prouct-highlights />
    </div>
  </styled.div>
</DescriptionContainer>
`;

exports[`DescriptionContainer Component RENDERER snapshot 1`] = `
<div
  className="sc-bdVaJa fdsMyH"
>
  <price />
  <promotions />
  <quantity />
  <buy-button-container />
  <returns />
  <share-container />
  <prouct-highlights />
</div>
`;

exports[`ImageContainer Component ENZYME snapshot 1`] = `
<ImageContainer>
  <styled.div>
    <div
      className="sc-bwzfXH dPgevf"
    >
      <product-title />
      <product-image />
      <product-carousel />
    </div>
  </styled.div>
</ImageContainer>
`;

exports[`ImageContainer Component RENDERER snapshot 1`] = `
<div
  className="sc-bwzfXH dPgevf"
>
  <product-title />
  <product-image />
  <product-carousel />
</div>
`;

exports[`ReviewContainer Component ENZYME snapshot 1`] = `
<ReviewContainer>
  <styled.div>
    <div
      className="sc-htpNat kFdBUn"
    >
      <review-top />
      <review-summary />
    </div>
  </styled.div>
</ReviewContainer>
`;

exports[`ReviewContainer Component RENDERER snapshot 1`] = `
<div
  className="sc-htpNat kFdBUn"
>
  <review-top />
  <review-summary />
</div>
`;
